--- a/index.html
+++ b/index.html
@@ -1,26 +1,91 @@
 <!doctype html>
-<html>
-<title>Site Maintenance</title>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-<style>
-  html, body { padding: 0; margin: 0; width: 100%; height: 100%; }
-  * {box-sizing: border-box;}
-  body { text-align: center; padding: 0; background: #d6433b; color: #fff; font-family: Open Sans; }
-  h1 { font-size: 50px; font-weight: 100; text-align: center;}
-  body { font-family: Open Sans; font-weight: 100; font-size: 20px; color: #fff; text-align: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center;}
-  article { display: block; width: 700px; padding: 50px; margin: 0 auto; }
-  a { color: #fff; font-weight: bold;}
-  a:hover { text-decoration: none; }
-  svg { width: 75px; margin-top: 1em; }
-</style>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gabriele Santoro - Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+        <script   src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>  
+
+    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="./style/navbar.css" />
+</head>
+
+<script>
+
+    $( document ).ready(function() {
+        $('#navbar').load("navbar.html");
+        $('#footer').load("footer.html")
+    });
+</script>
+
 <body>
-    <article>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 202.24 202.24"><defs><style>.cls-1{fill:#fff;}</style></defs><title>Asset 3</title><g id="Layer_2" data-name="Layer 2"><g id="Capa_1" data-name="Capa 1"><path class="cls-1" d="M101.12,0A101.12,101.12,0,1,0,202.24,101.12,101.12,101.12,0,0,0,101.12,0ZM159,148.76H43.28a11.57,11.57,0,0,1-10-17.34L91.09,31.16a11.57,11.57,0,0,1,20.06,0L169,131.43a11.57,11.57,0,0,1-10,17.34Z"/><path class="cls-1" d="M101.12,36.93h0L43.27,137.21H159L101.13,36.94Zm0,88.7a7.71,7.71,0,1,1,7.71-7.71A7.71,7.71,0,0,1,101.12,125.63Zm7.71-50.13a7.56,7.56,0,0,1-.11,1.3l-3.8,22.49a3.86,3.86,0,0,1-7.61,0l-3.8-22.49a8,8,0,0,1-.11-1.3,7.71,7.71,0,1,1,15.43,0Z"/></g></g></svg>
-        <h1>We&rsquo;ll be back soon!</h1>
-        <div>
-            <p>Sito in creazione. Restate connessi!</p>
-            <p>&mdash; Gabriele Santoro</p>
+    <div id="navbar"></div>
+    <section id="presentationSection">
+        <div id="presentationDiv">
+            <h1 class="presentation">Gabriele Santoro</h1>
+            <h3 class="presentation">Full Stack Developer</h3>
+            <div class="presentation">
+                <p class="presentation">Any sufficiently advanced bug is indistinguishable from a feature.</p>
+                <p id="citation" class="presentation">–Rick Kulaweic</p>
+            </div>
         </div>
-    </article>
+    </section>
+
+    <section id="chiSono">
+        <div id="chiSonoDiv" class="shadow p-3 mb-5 bg-white rounded nopadding">
+            <div class="row">
+                <div class="col-xl-7" id="col-presentation">
+                    <div class="container">
+                        <h1>Ciao!</h1>
+                        <h4>Il mio nome è Gabriele Santoro</h4>
+                        <p>Sono uno studente di Informatica presso l'Università degli Studi di Salerno</p>
+                        <hr>
+                        
+                        <div class="row">
+                            <div class="col">
+                                <button id="buttonChiSono">Chi sono?</button>
+                            </div>
+                            <div class="col">
+                                <span class="float-end">
+                                    <a href="#"><img src="./images/instagram.png" class="socials"></a>
+                                    <a href="#"><img src="./images/facebook.png" class="socials"></a>
+                                    <a href="#"><img src="./images/twitter.png" class="socials"></a>
+                                    <a href="#"><img src="./images/linkedin.png" class="socials"></a>
+                                    <a href="#"><img src="./images/github.png" class="socials"></a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-5">
+                    <img src="./images/prova2.png" id="image">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="servizi">
+
+        <div class="container p-3 mb-5">
+
+            <h1 class="text-center">Servizi</h1>
+            <p class="text-center">Offro diversi servizi, personalizzabili in base all'esigenza. Per ulteriori informazioni o domande compilate il form!</p>
+            <div class="row" id="serviziRow">
+                <div class="col"><h1 class="text-center">Gennaro</h1></div>
+                <div class="col"><h1 class="text-center">Gennaro</h1></div>
+                <div class="col"><h1 class="text-center">Gennaro</h1></div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <div id="footer"></div>
 </body>
 </html>
